--- a/543 Deliverable 1.Rmd
+++ b/543 Deliverable 1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output: html_document
 ---
 
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
@@ -8,32 +8,84 @@ This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute
 Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
 
 ```{r}
-CCdata2020=read.csv("2020CovidData.csv")
-CCdata2021=read.csv("2021CovidData.csv")
-CCdata2022=read.csv("2022CovidData.csv")
-CCdata2023=read.csv("2023CovidData.csv")
+#CCdata2020=read.csv("2020CovidData.csv")
+#CCdata2021=read.csv("2021CovidData.csv")
+#CCdata2022=read.csv("2022CovidData.csv")
+#CCdata2023=read.csv("2023CovidData.csv")
 ```
 
 
 ```{r}
-names(CCdata2020)
-names(CCdata2021)
-names(CCdata2022)
-names(CCdata2023)
+location='https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/'
+file='2020CovidData.csv'
+link=paste0(location,file)
+```
+
+
+```{r}
+#names(CCdata2020)
+#names(CCdata2021)
+#names(CCdata2022)
+#names(CCdata2023)
 ```
 
 
 ```{r}
 str(CCdata2020, width = 70, strict.width='cut')
-str(CCdata2021, width = 70, strict.width='cut')
-str(CCdata2022, width = 70, strict.width='cut')
-str(CCdata2023, width = 70, strict.width='cut')
+#str(CCdata2021, width = 70, strict.width='cut')
+#str(CCdata2022, width = 70, strict.width='cut')
+#str(CCdata2023, width = 70, strict.width='cut')
 ```
 
 
 ```{r}
-CCdata2021=as.data.frame(table(CCdata2020$cases))
-names(CCdata2020)=c("cases","state")
+head(CCdata2020$state,20)
+```
+
+
+```{r}
+#this isn't useful since its showing how many times each state was mentioned, but it doesn't tell how many cases per time each state was mentioned
+absoluteT=table(CCdata2020$state)
+absoluteT
+```
+
+
+```{r}
+#absoluteT=table(CCdata2020$cases)
+#absoluteT
+```
+
+
+```{r}
+#not really helpful in this case
+prop.table(absoluteT)
+```
+
+
+```{r}
+#not useful
+propT=prop.table(absoluteT)*100
+propT
+```
+
+
+```{r}
+#Not useful here
+(tableFreq=as.data.frame(absoluteT))
+```
+
+
+```{r}
+#still not useful
+names(tableFreq)=c("State","Cases")
+tableFreq$Percent=as.vector(propT)
+tableFreq
+```
+
+
+```{r}
+#CCdata2020=as.data.frame(table(CCdata2020$cases))
+#names(CCdata2020)=c("cases","state")
 
 library(ggplot2)
 base1=ggplot(data=CCdata2020, aes(x=state,cases))
@@ -43,8 +95,27 @@ bar1
 
 
 ```{r}
-CCdata2021=as.data.frame(table(CCdata2021$cases))
-names(CCdata2021)=c("state","cases")
+#2020 Data Only
+#ideally, the final would look something like this but I would also like a line graph with deaths per state in the same plot
+bar1+coord_flip()
+```
+
+
+```{r}
+
+```
+
+
+```{r}
+location='https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/'
+file='2021CovidData.csv'
+link=paste0(location,file)
+```
+
+
+```{r}
+#CCdata2021=as.data.frame(table(CCdata2021$cases))
+#names(CCdata2021)=c("state","cases")
 
 library(ggplot2)
 base2=ggplot(data=CCdata2021, aes(x=state,cases))
@@ -52,10 +123,23 @@ bar2=base2+geom_bar(stat = "identity")
 bar2
 ```
 
+```{r}
+#2021 Data Only
+#ideally, the final would look something like this but I would also like a line graph with deaths per state in the same plot
+bar2+coord_flip()
+```
+
 
 ```{r}
-CCdata2022=as.data.frame(table(CCdata2022$cases))
-names(CCdata2022)=c("state","cases")
+location='https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/'
+file='2022CovidData.csv'
+link=paste0(location,file)
+```
+
+
+```{r}
+#CCdata2022=as.data.frame(table(CCdata2022$cases))
+#names(CCdata2022)=c("state","cases")
 
 library(ggplot2)
 base3=ggplot(data=CCdata2022, aes(x=state,cases))
@@ -65,13 +149,34 @@ bar3
 
 
 ```{r}
-CCdata2023=as.data.frame(table(CCdata2023$cases))
-names(CCdata2023)=c("state","cases")
+#2022 Data Only
+#ideally, the final would look something like this but I would also like a line graph with deaths per state in the same plot
+bar3+coord_flip()
+```
+
+
+```{r}
+location='https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/'
+file='2023CovidData.csv'
+link=paste0(location,file)
+```
+
+
+```{r}
+#CCdata2023=as.data.frame(table(CCdata2023$cases))
+#names(CCdata2023)=c("state","cases")
 
 library(ggplot2)
 base4=ggplot(data=CCdata2023, aes(x=state,cases))
 bar4=base4+geom_bar(stat = "identity")
 bar4
+```
+
+
+```{r}
+#2023 Data Only
+#ideally, the final would look something like this but I would also like a line graph with deaths per state in the same plot
+bar4+coord_flip()
 ```
 
 
@@ -86,6 +191,7 @@ summary(CCdata2020$cases)
 
 
 ```{r}
+#How could you see cases per state? So there would be 55 different boxplots with their own min, 1st qu, median, mean, 3rd qu., and max.
 library(magrittr)
 statVals=statVals%>%as.vector()
 
@@ -98,6 +204,7 @@ b1
 
 
 ```{r}
+
 ```
 
 
