--- a/Index.ipynb
+++ b/Index.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "03a257d5",
+   "execution_count": 61,
+   "id": "38ee2a6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "68babfad",
+   "execution_count": 62,
+   "id": "a21539ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5400d510",
+   "execution_count": 63,
+   "id": "e35b9dc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ab06d2d3",
+   "execution_count": 64,
+   "id": "7f0d60a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "COVIDSTATE=pd.read_csv(gitCloudRepo + fileName)"
+    "COVIDSTATECASES=pd.read_csv(gitCloudRepo + fileName)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fe574732",
+   "execution_count": 65,
+   "id": "edb375a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COVIDSTATEDEATHS=pd.read_csv(gitCloudRepo + fileName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "cd4b91c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,52 +63,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "da78f03d",
+   "execution_count": 67,
+   "id": "af70b4dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['date', 'geoid', 'county', 'state', 'cases', 'cases_avg',\n",
-       "       'cases_avg_per_100k', 'deaths', 'deaths_avg', 'deaths_avg_per_100k'],\n",
-       "      dtype='object')"
+       "(Index(['date', 'geoid', 'county', 'state', 'cases', 'cases_avg',\n",
+       "        'cases_avg_per_100k', 'deaths', 'deaths_avg', 'deaths_avg_per_100k'],\n",
+       "       dtype='object'),\n",
+       " Index(['date', 'geoid', 'county', 'state', 'cases', 'cases_avg',\n",
+       "        'cases_avg_per_100k', 'deaths', 'deaths_avg', 'deaths_avg_per_100k'],\n",
+       "       dtype='object'))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(COVIDSTATE.columns)"
+    "(COVIDSTATECASES.columns,COVIDSTATEDEATHS.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5d37da11",
+   "execution_count": 68,
+   "id": "30ef3254",
    "metadata": {},
    "outputs": [],
    "source": [
-    "toDrop=['geoid','county','cases_avg','cases_avg_per_100k','deaths_avg','deaths_avg_per_100k']\n",
-    "COVIDSTATE.drop(columns=toDrop, inplace=True)"
+    "toDrop=['geoid','county','cases_avg','cases_avg_per_100k','deaths_avg','deaths_avg_per_100k','deaths']\n",
+    "COVIDSTATECASES.drop(columns=toDrop, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0befbf98",
+   "execution_count": 69,
+   "id": "43755b81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "COVIDSTATE.rename(columns={'date':'Month','cases':'COVIDCases','deaths':'COVIDDeaths','state':'State'}, inplace=True)"
+    "toDrop=['geoid','county','cases_avg','cases_avg_per_100k','deaths_avg','deaths_avg_per_100k','cases']\n",
+    "COVIDSTATEDEATHS.drop(columns=toDrop, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d8cb1bb1",
+   "execution_count": 70,
+   "id": "24d0ba85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COVIDSTATECASES.rename(columns={'date':'Month','cases':'COVIDCases','state':'State'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "7b736130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COVIDSTATEDEATHS.rename(columns={'date':'Month','deaths':'COVIDDeaths','state':'State'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "2a91b677",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0928738a",
+   "execution_count": 73,
+   "id": "b68e28f7",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +169,6 @@
        "      <th>Month</th>\n",
        "      <th>State</th>\n",
        "      <th>COVIDCases</th>\n",
-       "      <th>COVIDDeaths</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -144,13 +177,11 @@
        "      <td>January</td>\n",
        "      <td>Washington</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>January</td>\n",
        "      <td>Washington</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -158,13 +189,11 @@
        "      <td>January</td>\n",
        "      <td>Washington</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>January</td>\n",
        "      <td>Washington</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -172,11 +201,9 @@
        "      <td>January</td>\n",
        "      <td>Illinois</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -186,13 +213,11 @@
        "      <td>December</td>\n",
        "      <td>Northern Mariana Islands</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>890357</th>\n",
        "      <td>December</td>\n",
        "      <td>Virgin Islands</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -200,67 +225,204 @@
        "      <td>December</td>\n",
        "      <td>Virgin Islands</td>\n",
        "      <td>8</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>890359</th>\n",
        "      <td>December</td>\n",
        "      <td>Virgin Islands</td>\n",
        "      <td>6</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>890360</th>\n",
        "      <td>December</td>\n",
        "      <td>Virgin Islands</td>\n",
        "      <td>7</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>890361 rows × 4 columns</p>\n",
+       "<p>890361 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Month                     State  COVIDCases  COVIDDeaths\n",
-       "0        January                Washington           1            0\n",
-       "1        January                Washington           0            0\n",
-       "2        January                Washington           0            0\n",
-       "3        January                Washington           0            0\n",
-       "4        January                  Illinois           1            0\n",
-       "...          ...                       ...         ...          ...\n",
-       "890356  December  Northern Mariana Islands           0            0\n",
-       "890357  December            Virgin Islands           0            0\n",
-       "890358  December            Virgin Islands           8            0\n",
-       "890359  December            Virgin Islands           6            0\n",
-       "890360  December            Virgin Islands           7            0\n",
+       "           Month                     State  COVIDCases\n",
+       "0        January                Washington           1\n",
+       "1        January                Washington           0\n",
+       "2        January                Washington           0\n",
+       "3        January                Washington           0\n",
+       "4        January                  Illinois           1\n",
+       "...          ...                       ...         ...\n",
+       "890356  December  Northern Mariana Islands           0\n",
+       "890357  December            Virgin Islands           0\n",
+       "890358  December            Virgin Islands           8\n",
+       "890359  December            Virgin Islands           6\n",
+       "890360  December            Virgin Islands           7\n",
        "\n",
-       "[890361 rows x 4 columns]"
+       "[890361 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "COVIDSTATE.replace(\"\\,\",'',regex=True)"
+    "COVIDSTATECASES.replace(\"\\,\",'',regex=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4950010f",
+   "execution_count": 74,
+   "id": "d9b1c623",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>State</th>\n",
+       "      <th>COVIDDeaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>January</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>January</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>January</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>January</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>January</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890356</th>\n",
+       "      <td>December</td>\n",
+       "      <td>Northern Mariana Islands</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890357</th>\n",
+       "      <td>December</td>\n",
+       "      <td>Virgin Islands</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890358</th>\n",
+       "      <td>December</td>\n",
+       "      <td>Virgin Islands</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890359</th>\n",
+       "      <td>December</td>\n",
+       "      <td>Virgin Islands</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890360</th>\n",
+       "      <td>December</td>\n",
+       "      <td>Virgin Islands</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>890361 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Month                     State  COVIDDeaths\n",
+       "0        January                Washington            0\n",
+       "1        January                Washington            0\n",
+       "2        January                Washington            0\n",
+       "3        January                Washington            0\n",
+       "4        January                  Illinois            0\n",
+       "...          ...                       ...          ...\n",
+       "890356  December  Northern Mariana Islands            0\n",
+       "890357  December            Virgin Islands            0\n",
+       "890358  December            Virgin Islands            0\n",
+       "890359  December            Virgin Islands            0\n",
+       "890360  December            Virgin Islands            0\n",
+       "\n",
+       "[890361 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "COVIDSTATEDEATHS.replace(\"\\,\",'',regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "76604e6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "COVIDSTATEFinal=COVIDSTATE.replace(\"\\,\",'',regex=True).copy()"
+    "COVIDSTATECASESFinal=COVIDSTATECASES.replace(\"\\,\",'',regex=True).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "fac80de2",
+   "execution_count": 76,
+   "id": "878187ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COVIDSTATEDEATHSFinal=COVIDSTATEDEATHS.replace(\"\\,\",'',regex=True).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "357ec610",
    "metadata": {},
    "outputs": [
     {
@@ -269,26 +431,52 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 890361 entries, 0 to 890360\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column       Non-Null Count   Dtype \n",
-      "---  ------       --------------   ----- \n",
-      " 0   Month        890361 non-null  object\n",
-      " 1   State        890361 non-null  object\n",
-      " 2   COVIDCases   890361 non-null  int64 \n",
-      " 3   COVIDDeaths  890361 non-null  int64 \n",
-      "dtypes: int64(2), object(2)\n",
-      "memory usage: 27.2+ MB\n"
+      "Data columns (total 3 columns):\n",
+      " #   Column      Non-Null Count   Dtype \n",
+      "---  ------      --------------   ----- \n",
+      " 0   Month       890361 non-null  object\n",
+      " 1   State       890361 non-null  object\n",
+      " 2   COVIDCases  890361 non-null  int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 20.4+ MB\n"
      ]
     }
    ],
    "source": [
-    "COVIDSTATEFinal.info()"
+    "COVIDSTATECASESFinal.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a63ccfd",
+   "execution_count": 78,
+   "id": "fa2ed971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 890361 entries, 0 to 890360\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column       Non-Null Count   Dtype \n",
+      "---  ------       --------------   ----- \n",
+      " 0   Month        890361 non-null  object\n",
+      " 1   State        890361 non-null  object\n",
+      " 2   COVIDDeaths  890361 non-null  int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 20.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "COVIDSTATEDEATHSFinal.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "06dd2b8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,18 +485,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "854f7264",
+   "execution_count": 80,
+   "id": "ac915efa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "COVIDSTATEFinal.to_csv('COVIDSTATE.csv', index=False)"
+    "COVIDSTATECASESFinal.to_csv('COVIDSTATECASES.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e1b35928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COVIDSTATEDEATHSFinal.to_csv('COVIDSTATEDEATHS.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc2d96c",
+   "id": "c7a46668",
    "metadata": {},
    "outputs": [],
    "source": []
