--- a/Index.Rmd
+++ b/Index.Rmd
@@ -8,7 +8,31 @@ This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute
 Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
 
 ```{r}
-plot(cars)
+Glink="https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/"
+Flink="COVIDSTATECASES.csv"
+CovidCases=read.csv(paste0(Glink,Flink))
+
+Glink="https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/"
+Flink="COVIDSTATEDEATHS.csv"
+CovidDeaths=read.csv(paste0(Glink,Flink))
+```
+```{r}
+names(CovidCases)
+names(CovidDeaths)
+```
+```{r}
+str(CovidCases,width = 70, strict.width='cut')
+str(CovidDeaths,width = 70, strict.width='cut')
+```
+```{r}
+absoluteT=table(CovidCases$COVIDCases)
+absoluteT
+```
+```{r}
+(tableFreq=as.data.frame(absoluteT))
+```
+```{r}
+
 ```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
