--- a/Index.Rmd
+++ b/Index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Index"
+title: "R Notebook"
 output: html_notebook
 ---
 
@@ -9,29 +9,106 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 
 ```{r}
 Glink="https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/"
-Flink="COVIDSTATECASES.csv"
-CovidCases=read.csv(paste0(Glink,Flink))
+Flink="CountryRankingFinal.csv"
+CRF=read.csv(paste0(Glink,Flink))
+```
+```{r}
+names(CRF)
+```
+```{r}
+str(CRF,width = 70, strict.width='cut')
+```
+```{r}
+summary(CRF$LifeExpectancy)
+```
+```{r}
+(statVals=summary(CRF$LifeExpectancy,digits = 2)[1:6])
+```
 
-Glink="https://github.com/543-Van-Deliverables/Deliverable-1/raw/main/"
-Flink="COVIDSTATEDEATHS.csv"
-CovidDeaths=read.csv(paste0(Glink,Flink))
+
+```{r}
+library(magrittr)
+statVals=statVals%>%as.vector()
+
+base=ggplot(CRF,aes(y=LifeExpectancy))
+b1=base+geom_boxplot()
+b1=b1+coord_flip()
+b1=b1+scale_y_continuous(breaks=statVals)
+b1
 ```
 ```{r}
-names(CovidCases)
-names(CovidDeaths)
+(theIQR=IQR(CRF$LifeExpectancy,na.rm=T))
 ```
 ```{r}
-str(CovidCases,width = 70, strict.width='cut')
-str(CovidDeaths,width = 70, strict.width='cut')
+(lowerT=summary(CRF$LifeExpectancy)[[2]] - theIQR*1.5)
 ```
 ```{r}
-absoluteT=table(CovidCases$COVIDCases)
-absoluteT
+(numOutliers=sum(CRF$LifeExpectancy<lowerT,na.rm=T))
 ```
 ```{r}
-(tableFreq=as.data.frame(absoluteT))
+#How do I just get the threshold number to show as 56?
+txtUpper=paste0('Threshold:',lowerT)
+txtOut=paste0('Outlying Ages:',numOutliers)
+b1_line = b1 + geom_hline(yintercept = lowerT,color='green',linetype="dotted",size=2) 
+b1_upper_line=b1_line + annotate(geom = 'text',label=txtUpper,y = lowerT+5,x=0.2,angle=90)
+
+b1_upper_line_out=b1_upper_line + annotate(geom = 'text',label=txtOut,y = lowerT+60,x=0.1,angle=0)
+b1_upper_line_out
 ```
 ```{r}
+b1_upper_line_out_noX=b1_upper_line_out + 
+                      theme(axis.text.y = element_blank(),
+                            axis.ticks.y = element_blank(),
+                            axis.title.y = element_blank())
+b1_upper_line_out_noX
+
+b1_upper_line_out_noX + theme(axis.text.x = element_text(angle = 90,size = 8,vjust = 0.5))
+```
+```{r}
+WIDTH=10
+library(ggplot2)
+base= ggplot(CRF)  
+h1= base + geom_histogram(aes(x = LifeExpectancy),
+                          binwidth = WIDTH,
+                          fill='darkgreen') 
+h1=h1 + labs(y="count")
+h1
+```
+```{r}
+sd(CRF$LifeExpectancy,na.rm = T)
+
+mad(CRF$LifeExpectancy,na.rm = T)
+
+install.packages("DescTools")
+library(DescTools)
+CoefVar(CRF$LifeExpectancy,na.rm = T,unbiased=T,conf.level = 0.95)
+
+Skew(CRF$LifeExpectancy,na.rm = T, conf.level = 0.95, ci.type = "bca", R=2500)
+
+Kurt(CRF$LifeExpectancy, na.rm = T,conf.level = 0.95, ci.type = "bca",R=2500)
+
+MeanCI(CRF$LifeExpectancy,na.rm = T)
+mn=Mean(CRF$LifeExpectancy,na.rm = T)
+```
+```{r}
+cv=CoefVar(CRF$LifeExpectancy,na.rm = T)
+sd=SD(CRF$LifeExpectancy,na.rm = T)
+md=Median(CRF$LifeExpectancy,na.rm = T)
+mn=Mean(CRF$LifeExpectancy,na.rm = T)
+mn.low=MeanCI(CRF$LifeExpectancy,na.rm = T)[['lwr.ci']]
+mn.up=MeanCI(CRF$LifeExpectancy,na.rm = T)[['upr.ci']]
+sk=Skew(CRF$LifeExpectancy,na.rm = T)
+```
+
+
+```{r}
+annMean=paste0('Mean:',round(mn))
+annSk=paste0('Skewness:',round(sk,2))
+
+h1+ geom_vline(xintercept = mn,color='green') +annotate(geom = 'text',color='green',label=annMean,y = 75,x=mn+5,angle=90) + annotate(geom = 'text', color='darkblue',label=annSk,y = 05,x=lowerT+35,angle=0)
+```
+
+```
 
 ```
 
